# portfolio

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.development  Dockerfile.local  Dockerfile.production  Makefile  Pipfile  README.md  conftest.py  docker-compose.development.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  postgres.session.sql  pyproject.toml
.github/workflows/: deploy.yml  django.yml  pylint.yml  test.yml
core/: admin.py  models.py
core/migrations/: 0001_initial.py
middleware/: exception_logging.py
portfolio/: logging_config.py  settings.py  urls.py
portfolio/settings/: __init__.py  base.py  development.py  local.py  production.py
profits/: admin.py  models.py  pagination.py  serializer.py  serializers.py  urls.py  views.py
profits/data/: curl-commands.txt  utils_queries.sql
profits/data/currency_exchanges/: bankofengland-gbp-eur.csv  bankofengland-gbp-usd.csv
profits/data/prepopulate/: brokers.sql  currencies.sql
profits/interfaces/dtos/: operation_dto.py  profit_dto.py
profits/migrations/: 0001_initial.py  0002_alter_account_user_broker_ref_and_more.py  0003_alter_currencyexchange_date_alter_dividend_date_and_more.py
profits/repositories/: currency_repository.py  operation_repository.py
profits/services/: currency_service.py  exceptions.py  operation_dto.py  operation_service.py  operation_tracker.py  profit_calculator.py  profit_dto.py  profit_exchanger.py  profit_service.py
profits/templates/: profit_details.html  profit_total.html
profits/tests/: conftest.py
profits/tests/integration/: test_account_view.py  test_broker_list.py  test_broker_view.py  test_currency_exchange_list.py  test_currency_exchange_view.py  test_currency_list.py  test_currency_view.py  test_dividend_list.py  test_dividend_view.py  test_get_details_view.py  test_get_total_view.py  test_operation_list.py  test_operation_view.py  test_split_list.py  test_split_view.py
profits/tests/integration/services/: test_get_account_ticker_operations.py  test_get_total_details_ticker.py
profits/tests/integration/views/: test_account_view.py  test_broker_view.py  test_currency_exchange_view.py  (+4 more)
profits/tests/unit/: test_csv_utils.py
profits/utils/: csv_utils.py  datetime_utils.py  string_utils.py
profits/views/: account_view.py  base_view.py  currency_exchange_filter.py  currency_exchange_view.py  health_check.py  operation_view.py  split_view.py  views.py
terraform/: logging.tf  main.tf  security.tf  variables.tf
(+6 files in other folders)
